# CPP-SysPro

./: .gitmodules  README.md
task1/: CMakeLists.txt  avl.h  test.cpp  testavl.cpp
task2/: lines.cpp
task3/: avl.h  test.cpp  testavl.cpp
task4/: avl.h  testavl.cpp
task5/: scopedpointer.cpp
task6/: SquareMatrix.cpp
